fix cursor on collapse control

--- a/app/styles/areas/_menu.scss
+++ b/app/styles/areas/_menu.scss
@@ -62,6 +62,7 @@
       .menu__item--collapsed>& {
         display: block;
         position: absolute;
+        cursor: pointer;
         @include position(absolute, 50% null null 1em);
         @include transform(translateY(-50%));
       }
